src/test/deca/context/invalid/without_class/not_printable_type.deca
// Description:
//    Error : boolean type not printable
//
// Result:
//    INCOMPATIBLE_TYPE_PARAMETER: Cannot assign type \(.\)\+ as parameter of type printable
//    line 8
{
    print(false && true || false);
}